--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="root"></div>
+    <script src="/config.js"></script>
     <script type="module" src="/src/main.tsx"></script>
 </body>
 
